--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -41,7 +41,7 @@ jobs:
         run: yarn chain & sleep 5 && yarn deploy
 
       - name: Run nextjs lint
-        run: yarn web:lint --max-warnings=0
+        run: yarn workspace web lint --max-warnings=0
 
       - name: Check typings on nextjs
-        run: yarn web:check-types
+        run: yarn workspace web check-types
