--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,10 +35,11 @@ jobs:
         with:
           version: nightly
 
-      - name: Run foundry node, deploy contracts (& generate contracts typescript output)
-        env:
-          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-        run: yarn chain & sleep 5 && yarn deploy
+      - name: Run contract tests
+        run: yarn test
+
+      - name: Check contract compilation
+        run: yarn compile
 
       - name: Run nextjs lint
         run: yarn workspace web lint --max-warnings=0
