--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,13 +35,14 @@ jobs:
         with:
           version: nightly
 
-      - name: Run foundry node, deploy contracts (& generate contracts typescript output)
-        env:
-          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-        run: yarn chain & yarn deploy
+      - name: Run contract tests
+        run: yarn test
+
+      - name: Check contract compilation
+        run: yarn compile
 
       - name: Run nextjs lint
-        run: yarn next:lint --max-warnings=0
+        run: yarn workspace web lint --max-warnings=0
 
       - name: Check typings on nextjs
-        run: yarn next:check-types
+        run: yarn workspace web check-types
