feat: implement UUPS upgrade workflow with VehicleRegistry v2
- Add unified upgrade workflow following deploy pattern
- Create UpgradeVehicleRegistry.s.sol script inheriting from ScaffoldETHDeploy
- Extend parseArgs.js to handle both deploy and upgrade commands
- Add yarn scripts for upgrade command (root and evm workspace)

VehicleRegistry v2 improvements:
- Simplify ownership model: partner is always vehicle owner
- Remove unnecessary owner parameter from registration functions
- Implement separation of concerns: _registerVehicle only handles data
- Add batch minting for registerVehicleAndMintRevenueShareTokens
- Remove redundant address variable assignments

Usage:
  yarn upgrade --contract VehicleRegistry --proxy-address 0x...

This enables seamless UUPS contract upgrades while maintaining
compatibility with existing deployment infrastructure.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chain": "yarn evm:chain",
     "compile": "yarn evm:compile",
     "deploy": "yarn evm:deploy",
+    "upgrade": "yarn evm:upgrade",
     "flatten": "yarn evm:flatten",
     "fork": "yarn evm:fork",
     "format": "yarn web:format && yarn evm:format",
@@ -26,6 +27,7 @@
     "evm:clean": "yarn workspace evm clean",
     "evm:compile": "yarn workspace evm compile",
     "evm:deploy": "yarn workspace evm deploy",
+    "evm:upgrade": "yarn workspace evm upgrade",
     "evm:deploy-verify": "yarn workspace evm deploy:verify",
     "evm:flatten": "yarn workspace evm flatten",
     "evm:fork": "yarn workspace evm fork",
