--- a/protocols/evm/package.json
+++ b/protocols/evm/package.json
@@ -11,6 +11,7 @@
     "clean": "forge clean",
     "compile": "make compile",
     "deploy": "node scripts-js/parseArgs.js",
+    "upgrade": "node scripts-js/parseArgs.js",
     "flatten": "make flatten",
     "fork": "make fork FORK_URL=${1:-mainnet}",
     "format": "make format",
