feat: Implement simple asset registry abstraction and improve test coverage
This commit introduces a significant refactoring of the smart contract architecture, focusing on abstracting asset registration and centralizing token management, alongside a substantial improvement in test coverage across core contracts.

Key Changes:

- **Asset Registry Abstraction:**
  - Introduced `IAssetRegistry` interface.
  - `VehicleRegistry.sol` now implements `IAssetRegistry`, abstracting vehicle-specific logic behind a generic asset interface.
  - Functions like `registerVehicle` were renamed to `registerAsset` to align with the new abstraction.

- **Centralized Token Management:**
  - Introduced `RoboshareTokens.sol` as a central ERC1155 contract responsible for managing all asset and revenue tokens.
  - Implemented FIFO position tracking within `RoboshareTokens` for accurate sales penalty calculations.

- **Marketplace Refactoring:**
  - Updated `Marketplace.sol` to interact with the new `RoboshareTokens` contract for token operations.
  - Enhanced `purchaseTokens` logic to correctly handle sales penalties and ensure all fees are directed to the `Treasury`.
  - Added a new `Marketplace__InvalidPrice` error and implemented a check in `createListing` to prevent zero-price listings, improving contract robustness.
  - Refactored fee calculation in `purchaseTokens` to prevent arithmetic underflow by reordering checks.

- **Treasury Updates:**
  - `Treasury.sol` now integrates with `RoboshareTokens` for sales penalty calculations, no longer managing token positions directly.
  - Implemented `MINIMUM_PROTOCOL_FEE` in `ProtocolLib` and integrated its usage into `Treasury.distributeEarnings`, including a revert for earnings below this minimum.

- **Extensive Test Coverage Improvement:**
  - **`RoboshareTokens.sol`:** Achieved 100% branch coverage by adding tests for `setRevenueTokenInfo` revert conditions (`RoboshareTokens__NotRevenueToken`, `RoboshareTokens__RevenueTokenInfoAlreadySet`)

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -3,12 +3,12 @@ name: Contracts Coverage
 on:
   pull_request:
     paths:
-      - 'protocols/evm/**'
+      - "protocols/evm/**"
   push:
     branches:
       - main
     paths:
-      - 'protocols/evm/**'
+      - "protocols/evm/**"
 
 jobs:
   coverage:
@@ -26,7 +26,7 @@ jobs:
       - name: Run coverage
         working-directory: protocols/evm
         env:
-          FOUNDRY_DISABLE_NIGHTLY_WARNING: '1'
+          FOUNDRY_DISABLE_NIGHTLY_WARNING: "1"
         run: |
           forge --version
           forge cleanup || true
@@ -37,7 +37,7 @@ jobs:
         run: |
           set -euo pipefail
           test -f lcov.info
-          awk -v min_lines=80 -v min_branches=60 '
+          awk -v min_lines=80 -v min_branches=80 '
             BEGIN{FS=":"}
             /^SF:/ {file=$2; in_contract=(index(file,"contracts/")==1);}
             in_contract && /^LH:/ {lh+=$2}
