--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "evm:generate": "yarn workspace evm account:generate",
     "evm:lint": "yarn workspace evm lint",
     "evm:test": "yarn workspace evm test",
+    "evm:coverage": "yarn workspace evm coverage",
     "evm:verify": "yarn workspace evm verify",
     "generate": "yarn evm:generate",
     "graph": "yarn workspace subgraph graph",
@@ -59,6 +60,7 @@
     "subgraph:stop-node": "yarn workspace subgraph stop-node",
     "subgraph:test": "yarn workspace subgraph test -d",
     "test": "yarn evm:test",
+    "coverage": "yarn evm:coverage",
     "vercel": "yarn workspace web vercel",
     "vercel:login": "yarn workspace web vercel:login",
     "vercel:yolo": "yarn workspace web vercel:yolo",
