--- a/protocols/evm/.env.example
+++ b/protocols/evm/.env.example
@@ -15,5 +15,20 @@
 ALCHEMY_API_KEY=oKxs-03sij-U_N0iOlrSsZFr29-IqbuF
 # Etherscan API key is used to verify the contract on etherscan.
 ETHERSCAN_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
-# Default account for localhost / use "scaffold-eth-custom" if you wish to use a generated account or imported account
+
+# Keystore account for deployments
+# - "scaffold-eth-default": Anvil's prefunded account (localhost only, no password)
+# - For production: set to your keystore name (e.g., "my-deployer-wallet")
+# - If not set or "scaffold-eth-default" on non-localhost, you'll be prompted to select
 ETH_KEYSTORE_ACCOUNT=scaffold-eth-default
+
+# Treasury fee recipient address (required for production deployments)
+# This should be a multi-sig address for mainnet/testnet deployments
+# For localhost, this is optional - deployer address will be used as fallback
+# TREASURY_FEE_RECIPIENT=0xYourMultiSigAddress
+
+# Optional: USDC address for localhost deployments
+# Set this if you want to reuse a specific MockUSDC Deployment across multiple scripts
+# USDC_ADDRESS=0xMockUSDCAddress
+
+
