--- a/protocols/evm/foundry.toml
+++ b/protocols/evm/foundry.toml
@@ -22,24 +22,20 @@ arbitrumSepolia = "https://arb-sepolia.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 optimism = "https://opt-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 optimismSepolia = "https://opt-sepolia.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 polygon = "https://polygon-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-polygonMumbai = "https://polygon-mumbai.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
+polygonAmoy = "https://polygon-amoy.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 polygonZkEvm = "https://zkevm-rpc.com"
-polygonZkEvmTestnet = "https://rpc.public.zkevm-test.net"
 gnosis = "https://rpc.gnosischain.com"
 chiado = "https://rpc.chiadochain.net"
 base = "https://mainnet.base.org"
 baseSepolia = "https://sepolia.base.org"
-scrollSepolia = "https://sepolia-rpc.scroll.io"
 scroll = "https://rpc.scroll.io"
-pgn = "https://rpc.publicgoods.network"
-pgnTestnet = "https://sepolia.publicgoods.network"
-
+scrollSepolia = "https://sepolia-rpc.scroll.io"
 
 localhost = "http://127.0.0.1:8545"
 
 [etherscan]
-polygonMumbai = { key = "${ETHERSCAN_API_KEY}" }
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
+polygonAmoy = { key = "${ETHERSCAN_API_KEY}" }
 
 
 
