--- a/protocols/evm/subgraph/graph-node/docker-compose.yml
+++ b/protocols/evm/subgraph/graph-node/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   graph-node:
     image: graphprotocol/graph-node:v0.37.0
@@ -28,14 +27,10 @@ services:
     volumes:
       - ./data/ipfs:/data/ipfs
   postgres:
-    image: postgres
+    image: postgres:15
     ports:
       - "5432:5432"
-    command:
-      [
-        "postgres",
-        "-cshared_preload_libraries=pg_stat_statements"
-      ]
+    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements"]
     environment:
       POSTGRES_USER: graph-node
       POSTGRES_PASSWORD: let-me-in
