--- a/protocols/evm/subgraph/subgraph.yaml
+++ b/protocols/evm/subgraph/subgraph.yaml
@@ -10,7 +10,6 @@ dataSources:
     source:
       abi: MockUSDC
       address: "0x700b6A60ce7EaaEA56F065753d8dcB9653dbAD35"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -31,7 +30,6 @@ dataSources:
     source:
       abi: RoboshareTokens
       address: "0x8ce361602B935680E8DeC218b820ff5056BeB7af"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -44,9 +42,10 @@ dataSources:
         - name: RoboshareTokens
           file: ./abis/localhost_RoboshareTokens.json
       eventHandlers:
-        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
+        - event: TransferSingle(indexed address,indexed address,indexed
+            address,uint256,uint256)
           handler: handleRoboshareTokensTransferSingle
-        - event: RevenueTokenInfoSet(indexed uint256,uint256,uint256)
+        - event: RevenueTokenInfoSet(indexed uint256,uint256,uint256,uint256)
           handler: handleRevenueTokenInfoSet
       file: ./src/mapping.ts
   - kind: ethereum/contract
@@ -55,7 +54,6 @@ dataSources:
     source:
       abi: PartnerManager
       address: "0xe1DA8919f262Ee86f9BE05059C9280142CF23f48"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -76,7 +74,6 @@ dataSources:
     source:
       abi: RegistryRouter
       address: "0xeD1DB453C3156Ff3155a97AD217b3087D5Dc5f6E"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -97,7 +94,6 @@ dataSources:
     source:
       abi: VehicleRegistry
       address: "0x12975173B87F7595EE45dFFb2Ab812ECE596Bf84"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -118,7 +114,6 @@ dataSources:
     source:
       abi: Treasury
       address: "0x196dBCBb54b8ec4958c959D8949EBFE87aC2Aaaf"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -139,7 +134,6 @@ dataSources:
     source:
       abi: Marketplace
       address: "0x05B4CB126885fb10464fdD12666FEb25E2563B76"
-      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -151,7 +145,8 @@ dataSources:
         - name: Marketplace
           file: ./abis/localhost_Marketplace.json
       eventHandlers:
-        - event: ListingCreated(indexed uint256,indexed uint256,indexed uint256,address,uint256,uint256,uint256,bool)
+        - event: ListingCreated(indexed uint256,indexed uint256,indexed
+            uint256,address,uint256,uint256,uint256,bool)
           handler: handleListingCreated
       file: ./src/mapping.ts
 features:
