--- a/protocols/evm/subgraph/graph-node/docker-compose.yml
+++ b/protocols/evm/subgraph/graph-node/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   graph-node:
     image: graphprotocol/graph-node:v0.37.0
@@ -28,18 +27,14 @@ services:
     volumes:
       - ./data/ipfs:/data/ipfs
   postgres:
-    image: postgres
+    image: postgres:15
     ports:
       - "5432:5432"
-    command:
-      [
-        "postgres",
-        "-cshared_preload_libraries=pg_stat_statements"
-      ]
+    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements"]
     environment:
       POSTGRES_USER: graph-node
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph-node
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql
