--- a/protocols/evm/subgraph/subgraph.yaml
+++ b/protocols/evm/subgraph/subgraph.yaml
@@ -1,26 +1,153 @@
 specVersion: 0.0.4
-description: Greetings
-repository: https://github.com/scaffold-eth/se-2/packages/subgraph/
+description: Roboshare Protocol Subgraph
+repository: https://github.com/Roboshare/robo-mono
 schema:
   file: ./src/schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: YourContract
+    name: MockUSDC
     network: localhost
     source:
-      abi: YourContract
-      address: "0x700b6a60ce7eaaea56f065753d8dcb9653dbad35"
+      abi: MockUSDC
+      address: "0x700b6A60ce7EaaEA56F065753d8dcB9653dbAD35"
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
-        - Greeting
-        - Sender
+        - MockUSDCContract
+        - Transfer
       abis:
-        - name: YourContract
-          file: ./abis/localhost_YourContract.json
+        - name: MockUSDC
+          file: ./abis/localhost_MockUSDC.json
       eventHandlers:
-        - event: GreetingChange(indexed address,string,bool,uint256)
-          handler: handleGreetingChange
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleMockUSDCTransfer
       file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: RoboshareTokens
+    network: localhost
+    source:
+      abi: RoboshareTokens
+      address: "0x8ce361602B935680E8DeC218b820ff5056BeB7af"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - RoboshareTokensContract
+        - TransferSingle
+        - RevenueTokenInfoSet
+      abis:
+        - name: RoboshareTokens
+          file: ./abis/localhost_RoboshareTokens.json
+      eventHandlers:
+        - event: TransferSingle(indexed address,indexed address,indexed
+            address,uint256,uint256)
+          handler: handleRoboshareTokensTransferSingle
+        - event: RevenueTokenInfoSet(indexed uint256,uint256,uint256,uint256)
+          handler: handleRevenueTokenInfoSet
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: PartnerManager
+    network: localhost
+    source:
+      abi: PartnerManager
+      address: "0xe1DA8919f262Ee86f9BE05059C9280142CF23f48"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - PartnerManagerContract
+        - PartnerAuthorized
+      abis:
+        - name: PartnerManager
+          file: ./abis/localhost_PartnerManager.json
+      eventHandlers:
+        - event: PartnerAuthorized(indexed address,string)
+          handler: handlePartnerAuthorized
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: RegistryRouter
+    network: localhost
+    source:
+      abi: RegistryRouter
+      address: "0xeD1DB453C3156Ff3155a97AD217b3087D5Dc5f6E"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - RegistryRouterContract
+        - AssetRegistered
+      abis:
+        - name: RegistryRouter
+          file: ./abis/localhost_RegistryRouter.json
+      eventHandlers:
+        - event: AssetRegistered(indexed uint256,indexed address,uint8)
+          handler: handleAssetRegisteredRouter
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: VehicleRegistry
+    network: localhost
+    source:
+      abi: VehicleRegistry
+      address: "0x12975173B87F7595EE45dFFb2Ab812ECE596Bf84"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - VehicleRegistryContract
+        - VehicleRegistered
+      abis:
+        - name: VehicleRegistry
+          file: ./abis/localhost_VehicleRegistry.json
+      eventHandlers:
+        - event: VehicleRegistered(indexed uint256,indexed address,string)
+          handler: handleVehicleRegistered
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: Treasury
+    network: localhost
+    source:
+      abi: Treasury
+      address: "0x196dBCBb54b8ec4958c959D8949EBFE87aC2Aaaf"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - TreasuryContract
+        - CollateralLocked
+      abis:
+        - name: Treasury
+          file: ./abis/localhost_Treasury.json
+      eventHandlers:
+        - event: CollateralLocked(indexed uint256,indexed address,uint256)
+          handler: handleCollateralLocked
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: Marketplace
+    network: localhost
+    source:
+      abi: Marketplace
+      address: "0x05B4CB126885fb10464fdD12666FEb25E2563B76"
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - MarketplaceContract
+        - ListingCreated
+      abis:
+        - name: Marketplace
+          file: ./abis/localhost_Marketplace.json
+      eventHandlers:
+        - event: ListingCreated(indexed uint256,indexed uint256,indexed
+            uint256,address,uint256,uint256,uint256,bool)
+          handler: handleListingCreated
+      file: ./src/mapping.ts
+features:
+  - fullTextSearch
