--- a/web/.env.example
+++ b/web/.env.example
@@ -12,3 +12,10 @@
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 
+# IPFS Gateway for resolving ipfs:// URLs
+# Local development (default): http://127.0.0.1:8080/ipfs/
+# Production examples:
+#   - https://gateway.pinata.cloud/ipfs/
+#   - https://ipfs.io/ipfs/
+#   - https://dweb.link/ipfs/
+NEXT_PUBLIC_IPFS_GATEWAY=
