--- a/protocols/evm/subgraph/subgraph.yaml
+++ b/protocols/evm/subgraph/subgraph.yaml
@@ -148,6 +148,13 @@ dataSources:
         - event: ListingCreated(indexed uint256,indexed uint256,indexed
             uint256,address,uint256,uint256,uint256,bool)
           handler: handleListingCreated
+        - event: RevenueTokensTraded(indexed uint256,indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleRevenueTokensTraded
+        - event: ListingCancelled(indexed uint256,indexed address)
+          handler: handleListingCancelled
+        - event: ListingExtended(indexed uint256,uint256)
+          handler: handleListingExtended
       file: ./src/mapping.ts
 features:
   - fullTextSearch
