--- a/protocols/evm/subgraph/abis/localhost_Treasury.json
+++ b/protocols/evm/subgraph/abis/localhost_Treasury.json
@@ -818,6 +818,35 @@
   },
   {
     "type": "function",
+    "name": "snapshotAndClaimEarnings",
+    "inputs": [
+      {
+        "name": "assetId",
+        "type": "uint256",
+        "internalType": "uint256"
+      },
+      {
+        "name": "holder",
+        "type": "address",
+        "internalType": "address"
+      },
+      {
+        "name": "autoClaim",
+        "type": "bool",
+        "internalType": "bool"
+      }
+    ],
+    "outputs": [
+      {
+        "name": "snapshotAmount",
+        "type": "uint256",
+        "internalType": "uint256"
+      }
+    ],
+    "stateMutability": "nonpayable"
+  },
+  {
+    "type": "function",
     "name": "supportsInterface",
     "inputs": [
       {
