--- a/protocols/evm/subgraph/package.json
+++ b/protocols/evm/subgraph/package.json
@@ -10,8 +10,10 @@
     "create-local": "graph create --node http://localhost:8020/ roboshare/protocol",
     "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ roboshare/protocol",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 roboshare/protocol",
+    "deploy-local-auto": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 --version-label v0.0.1 roboshare/protocol",
     "graph": "graph",
     "local-ship": "yarn abi-copy && yarn codegen && yarn build --network localhost && yarn deploy-local",
+    "local-ship-auto": "yarn abi-copy && yarn codegen && yarn build --network localhost && yarn deploy-local-auto",
     "remove-local": "graph remove --node http://localhost:8020/ roboshare/protocol",
     "run-node": "cd graph-node && docker compose up",
     "stop-node": "cd graph-node && docker compose down",
