feat: add Markets UI with investor token purchase flow
Markets Page & Components:
- Create Markets page with responsive grid (1-4 cols by breakpoint)
- Add MarketAssetCard with APR, progress bar, available/total tokens
- Implement BuyTokensModal with combined approve+buy flow
- Enhanced success message with revenue rights percentage and holdings

Subgraph Updates:
- Add EarningsDistribution and AssetEarnings entities
- Add handleEarningsDistributed event handler
- Add Matchstick tests for earnings entities
- Create GetMarketListings GraphQL query

Admin Access Control:
- Add useIsAdmin hook (checks DEFAULT_ADMIN_ROLE via hasRole)
- Add RequireAdmin wrapper component
- Restrict /debug and /subgraph pages to admin wallets
- Hide admin nav links from non-admin users

Bug Fixes:
- Fix debug page infinite loop (useAnimationConfig)
- Fix UUPS proxy errors (skip proxiableUUID in ContractVariables)
- Remove debug console.log statements

--- a/protocols/evm/subgraph/subgraph.yaml
+++ b/protocols/evm/subgraph/subgraph.yaml
@@ -131,6 +131,9 @@ dataSources:
       eventHandlers:
         - event: CollateralLocked(indexed uint256,indexed address,uint256)
           handler: handleCollateralLocked
+        - event: EarningsDistributed(indexed uint256,indexed
+            address,uint256,uint256,uint256)
+          handler: handleEarningsDistributed
       file: ./src/mapping.ts
   - kind: ethereum/contract
     name: Marketplace
