--- a/protocols/evm/.env.example
+++ b/protocols/evm/.env.example
@@ -13,8 +13,12 @@
 
 # Alchemy rpc URL is used while deploying the contracts to some testnets/mainnets, checkout `foundry.toml` for it's use.
 ALCHEMY_API_KEY=oKxs-03sij-U_N0iOlrSsZFr29-IqbuF
-# Etherscan API key is used to verify the contract on etherscan.
+
+# Block explorer API keys for contract verification
 ETHERSCAN_API_KEY=DNXJA8RX2Q3VZ4URQIWP7Z68CJXQZSC6AW
+POLYGONSCAN_API_KEY=
+BASESCAN_API_KEY=
+ARBISCAN_API_KEY=
 
 # Keystore account for deployments
 # - "scaffold-eth-default": Anvil's prefunded account (localhost only, no password)
