--- a/protocols/evm/foundry.toml
+++ b/protocols/evm/foundry.toml
@@ -35,7 +35,13 @@ localhost = "http://127.0.0.1:8545"
 
 [etherscan]
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
-polygonAmoy = { key = "${ETHERSCAN_API_KEY}" }
+polygonAmoy = { key = "${POLYGONSCAN_API_KEY}" }
+baseSepolia = { key = "${BASESCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
+arbitrumSepolia = { key = "${ARBISCAN_API_KEY}", url = "https://api-sepolia.arbiscan.io/api" }
+base = { key = "${BASESCAN_API_KEY}" }
+arbitrum = { key = "${ARBISCAN_API_KEY}" }
+polygon = { key = "${POLYGONSCAN_API_KEY}" }
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
 
 
 
