--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -18,13 +18,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Create worktree
+        run: git worktree add test-worktree
+
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: stable
 
       - name: Run coverage
-        working-directory: protocols/evm
+        working-directory: test-worktree/protocols/evm
         env:
           FOUNDRY_DISABLE_NIGHTLY_WARNING: "1"
         run: |
@@ -33,7 +36,7 @@ jobs:
           forge coverage --ir-minimum --report lcov
 
       - name: Enforce contracts coverage thresholds
-        working-directory: protocols/evm
+        working-directory: test-worktree/protocols/evm
         run: |
           set -euo pipefail
           test -f lcov.info
@@ -61,4 +64,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: evm-lcov
-          path: protocols/evm/lcov.info
+          path: test-worktree/protocols/evm/lcov.info
