--- a/protocols/evm/subgraph/abis/localhost_Treasury.json
+++ b/protocols/evm/subgraph/abis/localhost_Treasury.json
@@ -705,6 +705,25 @@
   },
   {
     "type": "function",
+    "name": "processWithdrawalFor",
+    "inputs": [
+      {
+        "name": "account",
+        "type": "address",
+        "internalType": "address"
+      }
+    ],
+    "outputs": [
+      {
+        "name": "amount",
+        "type": "uint256",
+        "internalType": "uint256"
+      }
+    ],
+    "stateMutability": "nonpayable"
+  },
+  {
+    "type": "function",
     "name": "proxiableUUID",
     "inputs": [],
     "outputs": [
