chore: update dev scripts and deployment artifacts

--- a/protocols/evm/Makefile
+++ b/protocols/evm/Makefile
@@ -4,12 +4,12 @@ DEPLOY_SCRIPT ?= script/Deploy.s.sol
 
 # setup wallet for anvil
 setup-anvil-wallet:
-	shx rm ~/.foundry/keystores/scaffold-eth-default 2>/dev/null; 	shx rm -rf broadcast/Deploy.s.sol/31337
+	shx rm ~/.foundry/keystores/scaffold-eth-default 2>/dev/null;
 	cast wallet import --private-key 0x2a871d0798f97d79848a013d4936a73bf4cc922c825d33c1cf7073dff6d409c6 --unsafe-password 'localhost' scaffold-eth-default
 
 # Start local chain with state persistence
 chain: setup-anvil-wallet
-	anvil --state ./anvil-state.json
+	anvil --state ./anvil-state.json --state-interval 5
 
 # Start local chain without persistence (fresh state)
 chain-fresh: setup-anvil-wallet
