feat(web): enhance marketplace UI with escrow claims and holdings filter
- Add ClaimTokensModal and ClaimRefundModal for buyer withdrawals
- Update MarketAssetCard to show INVESTED badge and claim buttons
- Implement 'Your Holdings' filter in Markets page using multi-source verification (Contract + Subgraph + Optimistic)
- Update Partner Dashboard to handle new listing lifecycle states (Cancel, End, Finalize)
- Fix BuyTokensModal flow and error handling
- Update Subgraph schema and mappings for claim tracking

--- a/protocols/evm/subgraph/subgraph.yaml
+++ b/protocols/evm/subgraph/subgraph.yaml
@@ -160,6 +160,12 @@ dataSources:
           handler: handleRevenueTokensTraded
         - event: ListingCancelled(indexed uint256,indexed address)
           handler: handleListingCancelled
+        - event: ListingEnded(indexed uint256,indexed address)
+          handler: handleListingEnded
+        - event: TokensClaimed(indexed uint256,indexed address,uint256)
+          handler: handleTokensClaimed
+        - event: RefundClaimed(indexed uint256,indexed address,uint256)
+          handler: handleRefundClaimed
         - event: ListingExtended(indexed uint256,uint256)
           handler: handleListingExtended
       file: ./src/mapping.ts
