feat(subgraph): update schema and mappings for assetValue
- Added assetValue field to Vehicle entity
- Updated mapping to fetch VIN directly from contract during registration
- Fixed AssetRegistered event signature and indexing in subgraph.yaml
- Updated handleVehicleRegisteredAndMinted to persist assetValue

--- a/protocols/evm/subgraph/abis/localhost_Treasury.json
+++ b/protocols/evm/subgraph/abis/localhost_Treasury.json
@@ -414,12 +414,7 @@
     "name": "getTotalCollateralRequirement",
     "inputs": [
       {
-        "name": "revenueTokenPrice",
-        "type": "uint256",
-        "internalType": "uint256"
-      },
-      {
-        "name": "tokenSupply",
+        "name": "assetValue",
         "type": "uint256",
         "internalType": "uint256"
       }
@@ -594,12 +589,7 @@
         "internalType": "uint256"
       },
       {
-        "name": "revenueTokenPrice",
-        "type": "uint256",
-        "internalType": "uint256"
-      },
-      {
-        "name": "tokenSupply",
+        "name": "assetValue",
         "type": "uint256",
         "internalType": "uint256"
       }
@@ -622,12 +612,7 @@
         "internalType": "uint256"
       },
       {
-        "name": "revenueTokenPrice",
-        "type": "uint256",
-        "internalType": "uint256"
-      },
-      {
-        "name": "tokenSupply",
+        "name": "assetValue",
         "type": "uint256",
         "internalType": "uint256"
       }
@@ -1686,6 +1671,11 @@
   {
     "type": "error",
     "name": "InsufficientTokenBalance",
+    "inputs": []
+  },
+  {
+    "type": "error",
+    "name": "InvalidAssetId",
     "inputs": []
   },
   {
